--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-header {background-color: rgb(0, 0, 0); 
-    color: #ff6600;}
-.cabecalho-imagem{width: 25%;}
+*{
+    margin: 10;
+padding: 10;
+
+}
+
+.cabecalho {background-color: rgb(0, 0, 0); 
+    color: #ff0000;
+display: flex;
+justify-content: space-around;}
+.cabecalho-imagem{width: 10%;}
+.cabecalho-lista-items{
+    display: inline-block;
+margin: 0 16px;
+}   
