--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 *{
-    margin: 10;
-padding: 10;
+    margin: 0;
+padding: 0;
 
 }
-
-.cabecalho {background-color: rgb(0, 0, 0); 
-    color: #ff0000;
+.cabecalho {
+background-color: rgb(0, 0, 0); 
+color: #ff0000;
 display: flex;
-justify-content: space-around;}
-.cabecalho-imagem{width: 10%;}
-.cabecalho-lista-items{
-    display: inline-block;
+justify-content: space-around;
+padding: 24px 0;}
+.cabecalho-imagem{
+width: 15%;
+height: 5%;}
+li{
+display: inline-block;
 margin: 0 16px;
-}   
+padding: 24px 0;
+font-size: 24px;}   
+h1{
+display: inline-block;
+margin: 0 60px;
+padding: 100px 0;
+font-size: 40px;}
