--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ display: inline-block;
 margin: 0 60px;
 padding: 100px 0;
 font-size: 40px;}
+.escola-imagem{width: 20%;}
+.escola { background-image: linear-gradient( black,rgb(255, 0, 0));
+color:rgb(255, 255, 255);
+display: flexbox;
+justify-content: center;
+align-items: center;
+padding: 24px 0;
+}
