--- a/style.css
+++ b/style.css
@@ -1,32 +1,47 @@
 *{
     margin: 0;
 padding: 0;
-
 }
-.cabecalho {
-background-color: rgb(0, 0, 0); 
+.cabecalho {background-color: rgb(0, 0, 0); 
 color: #ff0000;
 display: flex;
 justify-content: space-around;
 padding: 24px 0;}
-.cabecalho-imagem{
-width: 15%;
+
+
+.cabecalho-imagem{width: 15%;
 height: 5%;}
+
+
 li{
-display: inline-block;
-margin: 0 16px;
+    display: inline-block;
+margin: 0 36px;
 padding: 24px 0;
-font-size: 24px;}   
+font-size: 34px;}  
+
+
 h1{
-display: inline-block;
-margin: 0 60px;
+    display: inline-block;
+margin: 0 36px;
 padding: 100px 0;
 font-size: 40px;}
-.escola-imagem{width: 20%;}
-.escola { background-image: linear-gradient( black,rgb(255, 0, 0));
+
+.escola-imagem{
+    width: 20%;
+}
+.escola { 
+    background-image: linear-gradient( black,rgb(255, 0, 0));
 color:rgb(255, 255, 255);
-display: flexbox;
+display: flex;
 justify-content: center;
 align-items: center;
-padding: 24px 0;
+padding: 24px 0;}
+
+.escola-conteudo
+{width: 65%;}
+
+.escola-titulo 
+{padding: 50px 30px;}
+.aluno-um{
+    width: 22% ;
 }
